--- a/src/app/components/modal.module.css
+++ b/src/app/components/modal.module.css
@@ -1,3 +1,23 @@
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 10px;
+  z-index: 1000;
+}
+
+.wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 6px;
+}
+
+
 .arrowBack,
 .arrowForward {
   position: absolute;
@@ -11,6 +31,7 @@
   padding: 12px;
   border-radius: 6px;
   cursor: pointer;
+  color: rgba(105, 105, 105, 1)
 }
 
 .arrowBack {
@@ -19,4 +40,10 @@
 
 .arrowForward {
   right: -12%;
+}
+
+.content {
+  margin: 3rem;
+  padding: 2rem;
+  background-color: white;
 }
