--- a/src/app/components/modal.module.css
+++ b/src/app/components/modal.module.css
@@ -26,12 +26,11 @@
   transform: translateY(-50%);
   background-color: #fbfcfe;
   box-shadow: 0px 6px 12px -2px rgba(21, 21, 21, 0.08);
-  height: 3rem;
-  width: 3rem;
   padding: 12px;
   border-radius: 6px;
   cursor: pointer;
-  color: rgba(105, 105, 105, 1)
+  color: rgba(105, 105, 105, 1);
+  padding: 20px;
 }
 
 .arrowBack {
