--- a/src/app/components/services/services.module.css
+++ b/src/app/components/services/services.module.css
@@ -1,5 +1,10 @@
 .container {
-  width: 100vw;
-  background-color:white;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
   color: black;
+}
+
+.serviceCard {
+  margin: 10px;
 }
